--- a/Style/style.css
+++ b/Style/style.css
@@ -2,4 +2,120 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  font-family: "Mulish", sans-serif;
+  font-style: normal;
+}
+body{
+  background-color: #ffffff;
+}
+
+
+header{
+  display: flex;
+  justify-content: space-between;
+  margin: 52px 150px ;
+  align-items: center;
+}
+.logo{
+  display: flex;
+}
+.logo img{
+  width: 65px;
+  height: 56.01px;
+  margin-right: 30px;
+}
+.logo_title {
+font-size: 36px;
+font-weight: 800;
+}
+
+.logo_title span{
+  color: #FF5400;
+}
+
+nav ul li{
+  display: inline-block;
+  padding: 20px;
+}
+
+nav ul li a{
+color: #424247;
+font-size: 18px;
+text-decoration: none;
+transition: 0.3s;
+}
+nav ul li a:hover{
+color: #FF5400;
+}
+.fast_child{
+  color: #FF5400;
+}
+.fa-solid{
+  font-size: 25px;
+  display: none;
+}
+
+/* banner arae style */
+.banner_area{
+  width: 1170px;
+  height: 500px;
+  margin: 0 auto;
+  background-image: linear-gradient(rgba(0,0,0,0.7), rgba(0,0,0,0.0)),  url(/Images/header1.png);
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  border-radius: 10px;
+  position: relative;
+}
+.banner_container{
+  width: 800px;
+  height: 288px;
+ margin: 106px 185px;
+ position: absolute;
+ text-align: center;
+}
+.banner_container h1{
+  color: #ffffff;
+  font-size: 64px;
+  font-weight: 800;
+  margin-bottom: 24px;
+}
+.banner_container p{
+  font-size: 16px;
+  line-height: 26px;
+  color: #ffffff;
+}
+
+.input_container{
+  margin-top: 48px;
+  width: 100%;
+  background:rgba(255,255,255, 25%);
+  height: 84px;
+  border-radius: 8px;
+  display: block;
+  display: flex;
+  justify-content: space-between;
+}
+ input, select, option, .btn{
+  background: #ffffff;
+  border: none;
+  border-radius: 10px;
+  font-size: 16px;
+  color: rgba(19,19,24, 50%);
+  width: 174px;
+  height: 52px;
+  margin: 16px 10px;
+}
+.btn {
+  background: #FF5400;
+  color: #ffffff;
+  font-size: 16px;
+  font-weight: 700;
+  border: none;
+}
+
+/* popular-section-style  */
+
+.Popular_section{
+
 }
