--- a/Style/style.css
+++ b/Style/style.css
@@ -156,6 +156,10 @@ margin-bottom: 20px;
   margin: 16px 10px;
   margin-left: -5px;
 }
+.populer_img img:hover{
+  transition: 0.5s;
+  transform: scale(1.1);
+}
 
  /* <!-- Destination section style --> */
 
@@ -183,11 +187,24 @@ text-align: center;
   justify-content: space-between;
   margin-bottom: 20px;
 }
+
 .img_1, .img_2{
   position: relative;
   width: 573px;
   height: 300px;
 }
+ .img_1 img:hover,
+ .img_2 img:hover, 
+ .img_3 img:hover, 
+ .img_4 img:hover, 
+ .img_5 img:hover, 
+ .img_6 img:hover, 
+ .img_7 img:hover{
+  transition: 0.7s;
+  transform: scale(1.1);
+}
+
+
 .img_3{
   width: 374px;
   height: 286px;
@@ -279,8 +296,7 @@ text-align: center;
   width: 1170px;
   height: 780px;
   margin: 300px auto 0;
-  border: 1px solid red;
-  
+  border: 1px solid red;  
 }
 .choose_us_container{
   text-align: center;
@@ -301,7 +317,6 @@ text-align: center;
 .card_container{
   width: 100%;
   height: 284px;
-  border: 1px solid red;
   display: flex;
   justify-content: space-between;
 }
@@ -349,10 +364,86 @@ text-align: center;
 }
 
 
+/* Deals_Discounts_section style */
+.Deals_Discounts_section{
+  width: 1170px;
+  height: 100%;
+  border: 1px solid red;
+  margin: 100px auto;
+}
+.deal_discount_container{
+  text-align: center;
+}
+.deal_discount_container h3{
+  font-size: 35px;
+  margin-bottom: 24px;
+  font-weight: 800;
+}
+.deal_discount_container p{
+  font-size: 16px;
+  margin-bottom: 48px;
+  color: rgba(19,19,24, 70%);
+  list-style: 26px;
+}
 
+.deal_card_1 {
+  width: 100%;
+  height: 500px;
+  position: relative;
+  margin-bottom: 24px;
+}
+.book_now{
+width: 579px;
+height: 389px;
+background-color: rgba(255,255,225, 80%);
+border: 3px solid rgba(255,255,225, 100%);
+border-radius: 18px;
+position: absolute;
+top: 56px;
+right: 56px;
+}
+.book_now_2{
+ top: 56px;
+left: 56px; 
+}
+.child_book_now{
+  margin: 50px 143px 24px 50px;
+  display: flex;
+}
 
-
-
+.child_book_now p{
+  font-size: 16px;
+  color: rgba(90,90,93, 100%);
+  padding: 0 10px;
+}
+.child_book_now  i{
+  color: #FF5400;
+  font-size: 20px;
+  padding-right: 2px;
+}
+.book_title{
+  margin: 0 77px 50px 50px;
+}
+.book_title h3{
+margin-bottom: 16px;
+font-size: 24px;
+font-weight: 700;
+}
+.book_title p{
+margin-bottom: 16px;
+font-size: 16px;
+color: rgba(90,90,93, 100%);
+line-height: 26px;
+}
+.book_title h2{
+  color: #FF5400;
+  font-size: 20px;
+  font-weight: 800;
+  margin-bottom: 24px;
+}
+#book_btn{
+  margin-left: -2px;
+}
 
 
 
