--- a/Style/responsive.css
+++ b/Style/responsive.css
@@ -325,4 +325,26 @@ margin: 0;
   right: 10px;
   top: 190px;
 }
+/* footer section  */
+.footer_section{
+  width: 100%;
+  height: 100%;
+}
+.footer_logo{
+  display: flex;
+  margin: 32px 106px 24px;
+}
+.footer_discription{
+  width: 70%;
+  margin-left: 80px;
+}
+.line_brack{
+  width: 90%;
+  margin: 0 20px;
+}
+.last_description{
+  margin-top: 30px;
+ color: rgba(19,19,24, 100%);
+ margin-bottom: 30px;
+}
 }
