--- a/Style/style.css
+++ b/Style/style.css
@@ -60,8 +60,9 @@ color: #FF5400;
   width: 1170px;
   height: 500px;
   margin: 0 auto;
-  background-image: linear-gradient(rgba(0,0,0,0.7), rgba(0,0,0,0.0)),  url(/Images/header1.png);
   background-position: center;
+  /* background-image: linear-gradient(rgba(0,0,0,0.7), rgba(0,0,0,0.0)),  url(/Images//header1.png); */
+  background-image: url(/Images//header1.png);
   background-repeat: no-repeat;
   background-size: cover;
   border-radius: 10px;
