--- a/Style/style.css
+++ b/Style/style.css
@@ -61,9 +61,7 @@ color: #FF5400;
   height: 500px;
   margin: 0 auto;
   background-position: center;
-  background-image: linear-gradient(rgba(0,0,0,0.7), rgba(0,0,0,0.0)),  url(../Images/banner.png);
-  /* background-image: url(../Images/bd-mountain.png); */
-  background-image: url(../Images/banner.png);
+  background-image: linear-gradient(rgba(0,0,0,0.7), rgba(0,0,0,0.0)),  url(../Images/travel_s.jpg);
   background-repeat: no-repeat;
   background-size: cover;
   border-radius: 10px;
